Fixed image being cropped from the bottom

--- a/src/components/imageItem/snapImageStyles.css
+++ b/src/components/imageItem/snapImageStyles.css
@@ -13,7 +13,7 @@ display: inline-block;
     font-style: italic;
 }
 .snap-item span{
-    height: 97%;
+    height: 100%;
     width: 100%;
 }
 @media only screen and (max-width:850px){
@@ -21,13 +21,13 @@ display: inline-block;
         height:90%
     }
     .snap-item span{
-        height: 100%;
+        height: 95%;
         width: 100%;
         z-index: -1;
     }
     .snap-item .first-subtitle{
         position: relative;
-        bottom: 125px;
+        bottom: 110px;
         left: 20px;
         z-index: 10;
     }
@@ -36,7 +36,7 @@ display: inline-block;
     }
     .snap-item .second-subtitle{
         position: relative;
-        bottom: 125px;
+        bottom: 110px;
         z-index: 10;
         display: flex;
         flex-direction: row;
